@startuml

title __CONTROLLER's Class Diagram__\n

  package com.company {
    package com.company.controller {
      class SchoolSystem {
          - users : User[]
          - tests : ITest[]
          + SchoolSystem()
          + getTests()
          + getTest()
          + addTest()
          + registerUser()
          + getMenu()
          + login()
      }
    }
  }
  

  package com.company {
    package com.company.controller {
      enum Subjects {
        MATH
        LITERATURE
      }
    }
  }
  

  SchoolSystem o-- Menu : studentMenu
  SchoolSystem o-- Menu : teacherMenu
  SchoolSystem o-- Menu : defaultMenu
  SchoolSystem +-down- Subjects


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
